--- a/sklearn-demo-solutions.ipynb
+++ b/sklearn-demo-solutions.ipynb
@@ -7,7 +7,7 @@
         "id": "82ba5cb0-b81e-43ea-acfa-e661fff2572c"
       },
       "source": [
-        "# **Machine Learning Forex TWAP Solution using scikit-learn**"
+        "# **Machine Learning Forex VWAP(Volume Weighted Average Price) Solution using scikit-learn**"
       ]
     },
     {
@@ -17,13 +17,13 @@
         "id": "3a251b12-73f7-4007-8f91-a866b8539ded"
       },
       "source": [
-        "This notebook demonstrates Machine Learning solution to predict TWAP direction for given currency pair based on historical prices\n",
+        "This notebook demonstrates Machine Learning solution to predict VWAP direction for given currency pair based on historical prices\n",
         "\n",
         "## Problem Formulation\n",
         "\n",
-        "In this example, we will use Allison Horst's Palmer Penguins dataset, available here: https://github.com/allisonhorst/palmerpenguins.\n",
+        "In this example, we will use Historical Currency price dataset provided from FOREX Tester APP, available here: https:https://forextester.com/data/datasources.\n",
         "\n",
-        "The dataset contains data on 344 penguins. There are three different species of penguins in the dataset, collected from three separate islands in the Palmer Archipelago, Antarctica. "
+        "The dataset contains Hourly pricing data on EURUSD Currency Pair daily for 201804. Initial development and proof of concept is done using EURUSD curreny data but plan to extend across all major G10 Currenvy pairs."
       ]
     },
     {
@@ -86,7 +86,16 @@
       "source": [
         "## Load Data\n",
         "\n",
-        "Here we first load the data into python using pandas and read it in as a pandas dataframe which is the format which we will use throughout the example. "
+        "Here we first load the data into python using pandas and read it in as a pandas dataframe which is the format which we will use throughout the example.\n",
+        "fx_volume data consist of Pricing data for the hourly interval\n",
+        "*   CurrencyPair Ticker\n",
+        "*   BUSINESSDATE AS DTYYYYMMDD\n",
+        "*   HOUR as TIME\n",
+        "*   OPEN PRICE\n",
+        "*   HIGH PRICE\n",
+        "*   LOW PRICE\n",
+        "*   CLOSING PRICE\n",
+        "*   VOLUME\n"
       ]
     },
     {
@@ -320,6 +329,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "VWAP represents Volume Weighted Average Price\n",
+        "Computation entails:\n",
+        " \n",
+        "1.   avg_price as average of High,Low,Open and Close by currencypair\n",
+        "2.   PV as avg_price*volume\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Nz-ZBbkh7FTM"
+      },
+      "id": "Nz-ZBbkh7FTM"
+    },
+    {
       "cell_type": "code",
       "source": [
         "fx_volume['<AVG_PRICE>'] = (fx_volume['<HIGH>'] + fx_volume['<LOW>'] + fx_volume['<CLOSE>'] + fx_volume['<OPEN>'])/4 \n",
@@ -328,12 +353,12 @@
         "fx_volume.info()"
       ],
       "metadata": {
-        "id": "U_1DOm5cbeJy",
-        "outputId": "3ef67906-0288-4532-d0d4-7ef523ef146e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 872
-        }
+        },
+        "id": "U_1DOm5cbeJy",
+        "outputId": "3ef67906-0288-4532-d0d4-7ef523ef146e"
       },
       "id": "U_1DOm5cbeJy",
       "execution_count": 52,
@@ -587,27 +612,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jqk5feuJiTh6"
-      },
-      "id": "jqk5feuJiTh6",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "grouped = fx_volume['<PV>'].groupby(fx_volume['<TICKER>']).agg(['sum','count'])\n",
         "display(grouped.head())"
       ],
       "metadata": {
-        "id": "4nQ2ADTCbMJY",
-        "outputId": "f6002f9d-3a16-4a6e-e50c-400533b148be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "4nQ2ADTCbMJY",
+        "outputId": "f6002f9d-3a16-4a6e-e50c-400533b148be"
       },
       "id": "4nQ2ADTCbMJY",
       "execution_count": 55,
