--- a/sklearn_FOREX_VWAP_solutions.ipynb
+++ b/sklearn_FOREX_VWAP_solutions.ipynb
@@ -17,7 +17,7 @@
         "id": "82ba5cb0-b81e-43ea-acfa-e661fff2572c"
       },
       "source": [
-        "# **Machine Learning Forex VWAP(Volume Weighted Average Price) Solution using scikit-learn**"
+        "# **Forex VWAP(Volume Weighted Average Price) ML Solution using scikit-learn**"
       ]
     },
     {
@@ -31,10 +31,9 @@
         "\n",
         "## Problem Formulation\n",
         "\n",
-        "In this example, we will use Historical Currency price dataset provided from FOREX Tester APP, available here: https:https://forextester.com/data/datasources.\n",
+        "In this example, we will use Historical Currencypair price volume dataset provided from FOREX Tester APP, available here: https:https://forextester.com/data/datasources.\n",
         "\n",
-        "The dataset contains Hourly pricing data on EURUSD Currency Pair daily for 201804. Initial development and proof of concept is done using EURUSD curreny data but plan to extend across all major G10 Currenvy pairs."
-      ]
+        "The dataset contains Hourly pricing data of 6 currency pair (EURUSD, GBPUSD, AUDUSD, NZSUSD, USDJPY and USDCHF) for April 2018. ]
     },
     {
       "cell_type": "code",
