--- a/VWAP ML Model.ipynb
+++ b/VWAP ML Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtBOqZ4LOx7+MbIgi82QUF",
+      "authorship_tag": "ABX9TyMX+epphJXzoQ5JtgpH8dL6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -268,6 +268,20 @@
       ],
       "metadata": {
         "id": "BibV92zkXhbT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feature Engineering tasks: \n",
+        "1. Transform tasks to compute avg_price column as avg of Open, Close, High and Low prices\n",
+        "2. Transform task to compute PV column as avg_price*volume\n",
+        "3. Impute sum of PV by ['Ticker','BusinessDate'] to populate cumulative_pv\n",
+        "4. Transform task to compute VWAP as cumulative_pv/volume\n",
+        "5. Merge FX_Volume_df data and FX_Trade_df dataset on 'Ticker','BusinessDate','Time_Bucket' Key to generate ML Model View"
+      ],
+      "metadata": {
+        "id": "bws2Md58YtBM"
       }
     }
   ]
