--- a/VWAP ML Model.ipynb
+++ b/VWAP ML Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMX+epphJXzoQ5JtgpH8dL6",
+      "authorship_tag": "ABX9TyOoLrQG2/Da5DFPf48rvmsw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,33 +102,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "995f0d77-430e-4a6d-ceee-ea1f9c18c1c4"
+        "outputId": "fc1f4310-6cd8-4c5e-eece-2e6d7c7395c3"
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(3042, 8)\n",
-            "24336\n",
-            "(14327, 5)\n",
-            "71635\n"
+            "(3013, 8)\n",
+            "24104\n",
+            "(14327, 1)\n",
+            "14327\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([['USDJPY', 20180401, '21:00', 2101, 106.167],\n",
-              "       ['USDJPY', 20180401, '21:00', 2102, 106.189],\n",
-              "       ['USDJPY', 20180401, '21:00', 2105, 106.221],\n",
-              "       ['USDJPY', 20180401, '21:00', 2106, 106.219],\n",
-              "       ['USDJPY', 20180401, '21:00', 2107, 106.222]], dtype=object)"
+              "array([['USDJPY\\t20180401\\t21:00\\t2101\\t106.167'],\n",
+              "       ['USDJPY\\t20180401\\t21:00\\t2102\\t106.189'],\n",
+              "       ['USDJPY\\t20180401\\t21:00\\t2105\\t106.221'],\n",
+              "       ['USDJPY\\t20180401\\t21:00\\t2106\\t106.219'],\n",
+              "       ['USDJPY\\t20180401\\t21:00\\t2107\\t106.222']], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 9
         }
       ]
     },
@@ -138,59 +138,59 @@
         "fx_volume_df.info()\n",
         "fx_volume_df.columns\n",
         "fx_volume_df['Ticker'].value_counts()\n",
-        "fx_volume_df[['Ticker','BusinessDate']].value_counts()"
+        "fx_volume_df[['Ticker','BusinessDate','TimeBucket']].value_counts()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PYz2kBSOMD3p",
-        "outputId": "411bb439-b0b4-4c1e-ccc7-48dcc162c9ec"
+        "outputId": "0df7587a-5607-40e4-fb5e-982b16cf8239"
       },
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 3042 entries, 0 to 3041\n",
+            "RangeIndex: 3013 entries, 0 to 3012\n",
             "Data columns (total 8 columns):\n",
             " #   Column        Non-Null Count  Dtype  \n",
             "---  ------        --------------  -----  \n",
-            " 0   Ticker        3042 non-null   object \n",
-            " 1   BusinessDate  3042 non-null   int64  \n",
-            " 2   TimeBucket    3042 non-null   object \n",
-            " 3   Open          3042 non-null   float64\n",
-            " 4   High          3042 non-null   float64\n",
-            " 5   Low           3042 non-null   float64\n",
-            " 6   Close         3042 non-null   float64\n",
-            " 7   Volume        3042 non-null   int64  \n",
+            " 0   Ticker        3013 non-null   object \n",
+            " 1   BusinessDate  3013 non-null   int64  \n",
+            " 2   TimeBucket    3013 non-null   object \n",
+            " 3   Open          3013 non-null   float64\n",
+            " 4   High          3013 non-null   float64\n",
+            " 5   Low           3013 non-null   float64\n",
+            " 6   Close         3013 non-null   float64\n",
+            " 7   Volume        3013 non-null   int64  \n",
             "dtypes: float64(4), int64(2), object(2)\n",
-            "memory usage: 190.2+ KB\n"
+            "memory usage: 188.4+ KB\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ticker  BusinessDate\n",
-              "GBPUSD  20180430        24\n",
-              "USDCHF  20180405        24\n",
-              "        20180403        24\n",
-              "        20180402        24\n",
-              "NZDUSD  20180430        24\n",
-              "                        ..\n",
-              "USDCHF  20180422         3\n",
-              "GBPUSD  20180429         3\n",
-              "AUDUSD  20180422         3\n",
-              "USDCHF  20180429         3\n",
-              "*       20180426         1\n",
-              "Length: 157, dtype: int64"
+              "Ticker  BusinessDate  TimeBucket\n",
+              "GBPUSD  20180406      20:00         2\n",
+              "NZDUSD  20180410      20:00         2\n",
+              "USDCHF  20180406      10:00         2\n",
+              "NZDUSD  20180410      10:00         2\n",
+              "        20180427      10:00         2\n",
+              "                                   ..\n",
+              "EURUSD  20180430      18:00         1\n",
+              "                      19:00         1\n",
+              "                      1:00          1\n",
+              "                      20:00         1\n",
+              "USDJPY  20180430      9:00          1\n",
+              "Length: 2831, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 10
         }
       ]
     },
@@ -210,7 +210,7 @@
         "id": "FZ8NrL5aOOrD",
         "outputId": "20be2050-b664-41be-b5da-a1bb55e81a13"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
