--- a/VWAP ML Model.ipynb
+++ b/VWAP ML Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoLrQG2/Da5DFPf48rvmsw",
+      "authorship_tag": "ABX9TyNgXNdV6zklZIHs9+6qunnL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "  from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
         "  from google.colab import files\n",
         "\n",
-        "  fx_volume_file = 'https://raw.githubusercontent.com/vadaliah/CS5260/master/currencypair_volume_datset.csv'\n",
+        "  fx_volume_file = 'https://raw.githubusercontent.com/vadaliah/CS5260/master/currencypair_volume_datset2.csv'\n",
         "  fx_volume_df = pd.read_csv(fx_volume_file)\n",
         "  fx_volume_df.sample(5)\n",
         "  print(fx_volume_df.shape)\n",
@@ -102,16 +102,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc1f4310-6cd8-4c5e-eece-2e6d7c7395c3"
+        "outputId": "6c845c0e-20d3-46f5-8483-ac085f2c1508"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(3013, 8)\n",
-            "24104\n",
+            "(281, 8)\n",
+            "2248\n",
             "(14327, 1)\n",
             "14327\n"
           ]
@@ -128,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -145,29 +145,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PYz2kBSOMD3p",
-        "outputId": "0df7587a-5607-40e4-fb5e-982b16cf8239"
+        "outputId": "0b0333fe-511a-4561-bbc8-6e9bdda41726"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 3013 entries, 0 to 3012\n",
+            "RangeIndex: 281 entries, 0 to 280\n",
             "Data columns (total 8 columns):\n",
             " #   Column        Non-Null Count  Dtype  \n",
             "---  ------        --------------  -----  \n",
-            " 0   Ticker        3013 non-null   object \n",
-            " 1   BusinessDate  3013 non-null   int64  \n",
-            " 2   TimeBucket    3013 non-null   object \n",
-            " 3   Open          3013 non-null   float64\n",
-            " 4   High          3013 non-null   float64\n",
-            " 5   Low           3013 non-null   float64\n",
-            " 6   Close         3013 non-null   float64\n",
-            " 7   Volume        3013 non-null   int64  \n",
+            " 0   Ticker        281 non-null    object \n",
+            " 1   BusinessDate  281 non-null    int64  \n",
+            " 2   TimeBucket    281 non-null    object \n",
+            " 3   Open          281 non-null    float64\n",
+            " 4   High          281 non-null    float64\n",
+            " 5   Low           281 non-null    float64\n",
+            " 6   Close         281 non-null    float64\n",
+            " 7   Volume        281 non-null    int64  \n",
             "dtypes: float64(4), int64(2), object(2)\n",
-            "memory usage: 188.4+ KB\n"
+            "memory usage: 17.7+ KB\n"
           ]
         },
         {
@@ -175,22 +175,22 @@
           "data": {
             "text/plain": [
               "Ticker  BusinessDate  TimeBucket\n",
-              "GBPUSD  20180406      20:00         2\n",
-              "NZDUSD  20180410      20:00         2\n",
-              "USDCHF  20180406      10:00         2\n",
-              "NZDUSD  20180410      10:00         2\n",
-              "        20180427      10:00         2\n",
+              "USDCHF  20180420      10:00         2\n",
+              "USDJPY  20180420      10:00         2\n",
+              "        20180430      10:00         2\n",
+              "        20180420      20:00         2\n",
+              "AUDUSD  20180430      20:00         2\n",
               "                                   ..\n",
-              "EURUSD  20180430      18:00         1\n",
-              "                      19:00         1\n",
-              "                      1:00          1\n",
-              "                      20:00         1\n",
+              "GBPUSD  20180420      11:00         1\n",
+              "                      12:00         1\n",
+              "                      13:00         1\n",
+              "                      14:00         1\n",
               "USDJPY  20180430      9:00          1\n",
-              "Length: 2831, dtype: int64"
+              "Length: 263, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
